examples/test/testpolicy5205.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5205
  namespace: namespace328
spec:
  podSelector:
    matchLabels:
      key27: value48
      key8: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value25
      podSelector:
        matchLabels:
          key5: value16
          key19: value11
